--- a/src/application.css
+++ b/src/application.css
@@ -102,6 +102,8 @@ svg {
   flex-grow: 1;
   background-color: var(--diagramHover);
   color: var(--gray);
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .month {
