--- a/src/application.css
+++ b/src/application.css
@@ -82,6 +82,7 @@ svg {
   height: 100%;
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .left-block, .right-block {
@@ -100,7 +101,7 @@ svg {
 
 .right-block {
   flex-grow: 1;
-  background-color: var(--diagramHover);
+  /* background-color: var(--diagramHover); */
   color: var(--gray);
   padding: 10px;
   box-sizing: border-box;
@@ -118,4 +119,22 @@ svg {
   color: var(--gray);
   font-size: 2rem;
   margin: 0;
+}
+
+.add-item {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  border: 2px solid var(--gray);
+  border-radius: 50%;
+  font-size: 2rem;
+  color: var(--gray);
+  background: var(--diagramHover);
+  padding: 10px;
+  line-height: 0.5em;
+}
+
+.add-item:hover {
+  cursor: pointer;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
